[tool.poetry]
name = "keybinds-map"
version = "0.1.0"
description = "beatiful project mfk"
authors = ["mks"]
license = "gpl"
readme = "README.md"
packages = [{include = "keybinds_map"}]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.2.0"
selenium = "^4.5.0"
Django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
