[tool.poetry]
name = "keybinds"
version = "0.1.0"
description = ""
authors = ["Maksim Lapin <katafoxi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.2.0"
Django = "^4.1.2"
selenium = "^4.5.0"
coverage = "^6.5.0"
mypy = "^0.982"
django-stubs = "^1.12.0"
psycopg2-binary = "^2.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
